mobile.css
/* ... */
.skill-js,
.skill-html,
.skill-css {
  width: 114px;
}

.skill-rub {
  width: 162px;
  margin-left: 27%;
}

.framework {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-left: 15%;
  gap: 24px;
  width: 281px;
  height: 336px;
}

.framework-header {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 8px 12px;
  gap: 12px;
  width: 281px;
  height: 40px;
}

.framework-h1,
.skills-h1,
.language-h1 {
  height: 24px;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  display: flex;
  align-items: center;
  text-align: center;
  color: #fff;
}

.framework-h1 {
  width: 227px;
  font-family: 'Inter', sans-serif;
}

.main-framework {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 12px;
  gap: 8px;
  width: 186px;
  height: 272px;
}

.frame-boot,
.frame-rails,
.frame-rspec,
.frame-capy,
.frame-sel {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 22px;
  line-height: 43px;
  color: #fff;
  margin-bottom: 15%;
}

.frame-boot,
.frame-rspec,
.frame-capy,
.frame-sel {
  width: 114px;
  height: 24px;
}

.frame-rails {
  width: 162px;
  height: 24px;
}

.frame-rspec {
  margin-left: 10%;
}

.skills {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-left: 15%;
  gap: 24px;
  width: 169px;
  height: 336px;
}

.skills-header {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 8px 12px;
  gap: 12px;
  width: 169px;
  height: 40px;
  margin-left: -16%;
}

.skills-h1 {
  width: 115px;
  font-family: 'Inter', sans-serif;
}

.main-skills {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 12px;
  gap: 8px;
  width: 138px;
  height: 272px;
}

.skill-codekit,
.skill-github,
.skill-codepen,
.skill-gitlab,
.skill-terminal {
  width: 114px;
  height: 24px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 22px;
  line-height: 43px;
  color: #fff;
  margin-bottom: 15%;
}

.skill-terminal,
.skill-codepen {
  margin-left: -20%;
}

button.hover-effect:hover {
  background-color: #fff5e1;
  border: 1px solid #fff5e1;
  color: #8a3200;
}

button.hover-effect:active {
  background-color: #8c3503;
  color: #f4f1f0;
  border: 1px solid #8c3503;
}

button.hover-effect:disabled {
  background-color: #f4f1f0;
  color: #4a4a45;
  border: 1px solid #f4f1f0;
}

/* contact form */
.foot-divider {
  width: 100%;
}

form {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 10px 24px;
  gap: 58px;
  width: 100%;
  height: auto;
}

.form-p {
  width: 100%;
  height: auto;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  text-align: center;
  color: #172b4d;
}

.form-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
  gap: 24px;
  width: 100%;
  height: auto;
}

::placeholder {
  color: #172b4d;
}

.input-field {
  width: 100%;
  height: auto;
  display: flex;
  justify-content: center;
}

.input-field input {
  width: 100%;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #172b4d;
  border: none;
  margin-bottom: -10%;
  padding: 5px;
}

.msg-field {
  height: auto;
  width: 100%;
  background-color: #fbf8f7;
  display: flex;
  justify-content: center;
}

.msg-field textarea {
  height: auto;
  width: 100%;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #172b4d;
  background-color: #fbf8f7;
  border: none;
  padding: 5px;
}

.form-btn button {
  padding: 12px;
  width: 131px;
  height: 48px;
  background-color: #8f3400;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 17px;
  line-height: 24px;
  color: #fff;
  border: none;
  cursor: pointer;
}

.form-btn button:hover {
  background-color: #fff5e1;
  border: 1px solid #fff5e1;
  color: #8a3200;
}

footer {
  width: 100%;
  height: auto;
  margin-top: 0;
}

.footer-divider {
  height: 1px;
  width: 100%;
}

.form-social {
  display: flex;
  align-items: center;
  gap: 10px;
  width: 200px;
  height: 40px;
  margin: 0 auto;
}

.foot-social {
  width: 24px;
  height: 24px;
  color: #505f79;
}

/* Display for desktop view only. blocking them on the mobile view */
.desktop-navbar-container {
  display: none;
}

/* <!-- Popup Styles Starts Here --> */
.popup-div {
  position: absolute;
  top: 3%;
  left: 5%;
  width: 100vw;
  height: auto;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1000;
  transition: all 0.3s ease;
}

.pop-content {
  background-color: white;
  padding: 1.25em;
  max-width: 90%;
  max-height: 90%;
  overflow-y: auto;
  border-radius: 5px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
}

.tittle-close {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.pop-close-btn {
  font-size: 1.5em;
  color: #67798e;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.pop-title {
  width: 16.188em;
  margin-top: 0;
  padding-bottom: 10%;
  font-family: 'Crete Round', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 2em;
  line-height: 2.75em;
  color: #172b4d;
}

.flex-img_descrip_btns {
  width: 100%;
  height: auto;
}

.flex-descrip-btn {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  height: auto;
}

.pop-img {
  max-width: 100%;
  height: auto;
  margin-bottom: 1.25em;
}

.pop-descrip {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 1em;
  line-height: 1.5em;
  color: #344563;
}

.pop-btns {
  padding-top: 5%;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.pop-btns a {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
/* ... */

